-Added new home.css ( temporary , since an "all-together" css file would be better ). -First steps in designing home.html -Checkboxes in book_entry.html are now correctly aligned.

--- a/book_entry_style.css
+++ b/book_entry_style.css
@@ -41,6 +41,16 @@ body {
     padding: 3px 75px;
 }
 
+#genre-title {
+    float: left;
+}
+
+#genre-checkboxes {
+    float: right;
+
+}
+
+
 label{
     float: left;
     width: 160px;
